# python-traning

./: .gitignore
GSO_TASK/user_registration_project/: db.sqlite3
fastapi_project/: main.py  pyproject.toml
fastapi_project/E-commerce-FastAPI-master/: config.py
fastapi_project/Ecom_api/: main.py  models.py
fastapi_project/Fast Api/: demo.py  dependency.py  depends.py  main1.py  models.py  pyproject.toml  query.py  request_body.py
fastapi_project/Fast Api/FASTAPI/: database.py  main.py  models.py
fastapi_project/Fast Api/FASTAPI/crudenv/: pyvenv.cfg
fastapi_project/Fast Api/JWTTOKEN/: main.py
fastapi_project/Fast Api/JWTTOKEN/python-jose[cryptography]/: pyproject.toml
fastapi_project/Fast Api/JWTTOKEN/python-jose[cryptography]/tests/: test_python_jose[cryptography].py
fastapi_project/Language_translator/: main.py  trans.py
fastapi_project/Todos/: crud.py  database.py  main.py  models.py  schemas.py
fastapi_project/backgroundtask/: main.py
fastapi_project/crud_fastapi/: crud.py  database.py  main.py  models.py  schemas.py
fastapi_project/eventlerarn/: main.py
fastapi_project/fastapi_project/: requirements.txt
fastapi_project/fastapitestcase/: main.py  test_main.py
fastapi_project/jwttokenlearn/: functions.py  main.py  main12.py
fastapi_project/learntortoise/: main.py
fastapi_project/middleware/: main.py
fastapi_project/myenv/: pyvenv.cfg
fastapi_project/social-auth/: main.py
myproject/: db.sqlite3
myproject/myapp/: forms.py  views.py
myproject/myproject/: settings.py  urls.py
portfolio_website/: db.sqlite3
(+40 files in other folders)
